# Cm

./: .clang-format  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  IMPLEMENTATION_SUMMARY.md  MAKEFILE_GUIDE.md  MODULE_SYSTEM_STATUS.md  Makefile  README.md  ROADMAP.md  VERSION  array_compare.js  cm_config.json  cmake_install.cmake  docker-compose.yml  flake.nix  hello.cm  impl_generics.js  interface_test.js  output.js  slice_syntax.js  slice_test.js  string_slice.js  test_1d_native  test_2d_native  test_basic_macro.cm  test_import_braces.cm  test_lex.cm  test_native  test_ptr_native  test_simple_macro.cm
.agent/rules/: code-quality.md  compiler-development.md  git-conventions.md  same-claude.md  testing.md
.agent/workflows/: bug-fix.md  feature-implementation.md  pr-review.md  release.md  security-check.md
.github/: PR_RULES.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/workflows/: benchmark.yml  ci.yml  deploy-pages.yml  release.yml  test-interpreter.yml  test-js.yml  test-llvm-native.yml  test-llvm-wasm.yml  tests.yml  unit-tests.yml  version-check.yml
docs/: AUDIT_SUMMARY_20260111.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_PRIORITY.md  FEATURES.md  GITHUB_PAGES_SETUP.md  Gemfile  IMPLEMENTATION_ROADMAP.md  MIR_INTERPRETER_SUMMARY.md  MODULE_SYSTEM.md  OPTIMIZATION_LEVEL_TESTING.md  OPTIMIZATION_LEVEL_TESTING_UPDATE.md  PR.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  ROADMAP.md  STRING_INTERPOLATION_EXAMPLES.md  STRUCT_INVESTIGATION_INDEX.md  UNIMPLEMENTED_FEATURES.md  VERSION_PLAN.md  _config.yml  add_frontmatter.sh  backend_comparison.md  docker-compose.yml  implementation_progress_2024_12_13.md  implementation_progress_2024_12_13_final.md  implementation_status.md  index.en.md  index.md  known_limitations.md  library_structure.md  llvm_multiplatform.md  move_files.sh  refactoring_audit_comprehensive_20260111.md
docs/_layouts/: default.html
docs/architecture/: buffered_codegen.md  file_structure_reorganization.md  infinite_loop_detection.md
docs/archive/: 011_ownership_and_borrowing.md  012_refactoring_proposal.md  DOCUMENTATION_SUMMARY.md  FEATURES.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  RESTRUCTURE_SUMMARY.md  STRING_INTERPOLATION_ARCHITECTURE.md  STRING_INTERPOLATION_README.md  STRUCT_EXECUTIVE_SUMMARY.txt  STRUCT_IMPLEMENTATION_STATUS.md  optimization_import_hang.md
docs/debug/: DEBUG_SYSTEM_IMPROVEMENTS.md
docs/design/: 001_v0.13.1_design.md  013_multi_param_generics.md  CANONICAL_SPEC.md  MODULE_FINAL_IMPLEMENTATION.md  MODULE_IMPLEMENTATION_FINAL_PLAN.md  MODULE_IMPLEMENTATION_STATUS.md  MODULE_SYSTEM_FINAL.md  README.md  architecture.md  backends.md  baremetal.md  cm_grammar.bnf  cm_grammar.md  compile_options_redesign.md  derive.md  editor.md  ffi.md  format_string_redesign.md  hir.md  interpreter.md  js_web_interop.md  lir.md  method_chaining.md  mir.md  mir_lowering_redesign.md  mir_ssa_redesign.md  module_compilation_strategy.md  module_separate_compilation.md  ownership_and_borrowing.md  platform.md  simplified_architecture.md  string_interpolation_implementation.md  switch_pattern.md  target_attribute_redesign.md  type_system.md  uefi_hello_world_roadmap.md
docs/features/: README.md
docs/flyer/: flyer.css  v0.12.0_1page.html  v0.14.0_2page.html
docs/guides/: MODULE_USER_GUIDE.md  README.md  control-flow.md  llvm-backend.md  memory.en.md  methods.en.md  methods.md  operators.md  optimization.md  wasm-backend.md
docs/implementation/: README.md  implementation_progress_2025_01_13.md  implementation_status.md
docs/internals/: array_vectorization_design.md
docs/issues/: optimization_import_hang.md  primitive_impl_borrowed_self.md  unimplemented_features.md
docs/js/: README.md  ROADMAP.md
docs/llvm/: LLVM_OPTIMIZATION.md  LLVM_RUNTIME_LIBRARY.md  README.md  llvm_backend_implementation.md  llvm_implementation_summary.md  llvm_migration_plan.md
docs/optimization/: OPTIMIZATION_STATUS.md  WASM_OPTIMIZATION_GUIDE.md  advanced_optimization_design.md  convergence_strategies.md  implementation_details.md  infinite_loop_detection.md  mir_optimization_roadmap.md  native_wasm_dce.md  no_std_implementation_proposal.md  usage_guide.md  (+4 more)
examples/: README.md  RENAMING_SUMMARY.md
samples/: factorial.cm  factorial_simple.cm  fibonacci.cm  fizzbuzz.cm  fizzbuzz_switch.cm  prime_numbers.cm
scripts/: DOCKER_MEMORY.md  README.md  build_and_test_llvm.sh  docker-shell.sh  test-in-docker.sh  test_incremental_build.sh  validate_bnf.py
src/: main.cpp
std/: io.cm  mod.cm
tests/: README.md  TEST_SUMMARY.md  optimization_test_runner.sh  run_tests.sh  test_1d_matmul.cm  test_2d_300.cm  test_2d_simple.cm  test_2d_small.cm  test_2d_tiny.cm  test_4d_array.cm  test_config.yaml  test_generic_func_call.cm  test_generic_struct_fix.cm  test_infinite_loop_detection.cpp  test_init_only.cm  test_ir_1d.cm  test_ir_2d.cm  test_ir_ptr.cm  test_iter_closure_pattern.cm  test_iter_closure_simple.cm  test_iterator_explicit_demo.cm  test_iterator_proposal.cm  test_local_ptr_assign.cm  test_matmul_100.cm  test_matmul_100.cpp  test_matmul_100_cm  test_matmul_100_cpp  test_matmul_1d  test_matmul_1d.cm  test_matmul_300.cpp  test_matmul_300_cpp  test_matmul_cm  test_matmul_only.cm  test_matmul_transpose  test_matmul_transpose.cm  test_mini_sort.cm  test_minimal_generic.cm  test_nested_generic.cm  test_optimization_level.cm  test_ptr_300.cm  (+15 more)
tests/bench_marks/rust/: 01_prime.rs  02_fibonacci_recursive.rs  03_fibonacci_iterative.rs  04_array_sort.rs  05_matrix_multiply.rs  05_matrix_multiply_array.rs  05b_matrix_multiply_2d.rs  06_4d_array.rs  06_prime_sieve.rs  07_fibonacci_memoized.rs  07_struct_array.rs  Cargo.toml  benchmark.rs
vscode-extension/: .gitignore  .vscodeignore  README.md  eslint.config.mjs  iconTheme.json  language-configuration.json  package.json  pnpm-lock.yaml  tsconfig.json
web/: index.html  index.js
(+2483 files in other folders)
